Fix menu items not stretching when it's only one

--- a/src/app.css
+++ b/src/app.css
@@ -1538,6 +1538,9 @@ body > .szh-menu-container {
   /* two columns only */
   grid-template-columns: repeat(2, 1fr);
 }
+.szh-menu .menu-horizontal:has(> .szh-menu__item:only-child) {
+  grid-template-columns: 1fr;
+}
 .szh-menu .menu-horizontal > .szh-menu__item:not(:only-child):first-child,
 .szh-menu .menu-horizontal > *:not(:only-child):first-child .szh-menu__item {
   padding-right: 4px !important;
